packages/styles/src/styles/layout/_grid.css
.row {
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    gap: var(--grid-spacing);
}

@container (max-width: 992px) {
    .row {
        grid-template-columns: repeat(6, 1fr);
    }

    .col-7,
    .col-8,
    .col-9,
    .col-10,
    .col-11,
    .col-12 {
        grid-column: span 6;
    }
}

@container (max-width: 768px) {
    .row {
        grid-template-columns: repeat(4, 1fr);
    }

    .col-5,
    .col-6,
    .col-7,
    .col-8,
    .col-9,
    .col-10,
    .col-11,
    .col-12 {
        grid-column: span 4;
    }
}

@container (max-width: 576px) {
    .row {
        grid-template-columns: repeat(2, 1fr);
    }

    .col-3,
    .col-4,
    .col-5,
    .col-6,
    .col-7,
    .col-8,
    .col-9,
    .col-10,
    .col-11,
    .col-12 {
        grid-column: span 2;
    }
}

.col-1 {
    grid-column: span 1;
}

.col-2 {
    grid-column: span 2;
}

.col-3 {
    grid-column: span 3;
}

.col-4 {
    grid-column: span 4;
}

.col-5 {
    grid-column: span 5;
}

.col-6 {
    grid-column: span 6;
}

.col-7 {
    grid-column: span 7;
}

.col-8 {
    grid-column: span 8;
}

.col-9 {
    grid-column: span 9;
}

.col-10 {
    grid-column: span 10;
}

.col-11 {
    grid-column: span 11;
}

.col-12 {
    grid-column: span 12;
}

.col-start {
    display: grid;
    place-items: start;
}

.col-center {
    display: grid;
    place-items: start center;
}

.col-end {
    display: grid;
    place-items: start end;
}

@media screen and (max-width: 992px) {
    .col-1,
    .col-2,
    .col-3,
    .col-4,
    .col-5,
    .col-6,
    .col-7,
    .col-8,
    .col-9,
    .col-10,
    .col-11,
    .col-12 {
        grid-column: span 12;
    }
}

